--- a/readme
+++ b/readme
@@ -1,1 +1,3 @@
-参考资料：http://blog.csdn.net/catoop/article/details/50668896
+参考资料：
+http://blog.csdn.net/catoop/article/details/50668896
+http://blog.didispace.com/springbootswagger2/
