--- a/readme
+++ b/readme
@@ -1,3 +1,6 @@
 参考资料：
 http://blog.csdn.net/catoop/article/details/50668896
 http://blog.didispace.com/springbootswagger2/
+
+swagger-ui url:http://localhost:8080/swagger-ui.html
+controller url:http://localhost:8080/api/test/base
